@@ -1,3 +1,7 @@
+2011-11-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* jira2.el (jira2-custom-field-value): new function
+
 2011-03-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-namespace-put-link): check if the target
